--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          <br>
          <br>
 
-         <a>Click <a href="jason_resume_4_18.pdf" download  target="_blank" >here</a> for a pdf version of my resume. (Updated 4/18/20)</a>
+         <a>Click <a href="jason_resume_4_21.pdf" download  target="_blank" >here</a> for a pdf version of my resume. (Updated 4/18/20)</a>
        </p>
         <div class="social-icons">
           <a href="#">
@@ -249,8 +249,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Projects</h2>
-          <h3 class="mb-0">Full Stack To-Do Web App - In Progress</h3><br>
+        <h2 class="mb-5">Projects [Section in-progress]</h2>
+          <h3 class="mb-0">Full Stack Fitness Web Application - In Progress</h3><br>
           <h3 class="mb-0">GroupMe Chat Bot</h3><br>
           <h3 class="mb-0">CEO Gary Vaynerchuck Data Analysis</h3><br>
           <h3 class="mb-0">SchoolVR - Runner Up in RPI Business Model Competition</h3><br>
