added blog page for school vr project

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Sales Development Intern</h3>
             <div class="subheading mb-3">Vake Inc., REIT</div>
-            <p>Increased sales lead generation by 25% by using a web-scraper to accelerate the lead generation process. Leveraged strong interpersonal skills to attract and inititate consumer interest in company product. <br>
-            Created a tutorial on how to use web-scraping tool for all Salesinterns in the revamped salesprocesses.</p>
+            <p>Increased sale leads generation by incorporating a web-scraper to accelerate the lead generation process. Leveraged strong interpersonal skills to attract and inititate consumer interest in company product. <br>
+            Created a tutorial on how to use web-scraping tool for all Sales interns in the revamped sales processes. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2019 - August 2019</span>
@@ -125,12 +125,12 @@
           <div class="resume-content">
             <h3 class="mb-0">Founder of eCommerce Brand</h3>
             <p>Learned the fundamentals and practices of running an online small business.<br>
-               Increased ad engagement rates by tesing new copy and promotional strategies on FB Ad Manager. <br>
+               Increased ad engagement rates by tesing new copy and promotional strategies on FB Ad Manager.<br>
                Reached a 3% web conversation rate by learning how to leverage product and marketing opportunites.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - August 2019</span>
+            <span class="text-primary">May 2019 - December 2019</span>
           </div>
         </div>
 
@@ -250,10 +250,16 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Projects [Section in-progress]</h2>
-          <h3 class="mb-0">Full Stack Fitness Web Application - In Progress</h3><br>
-          <h3 class="mb-0">GroupMe Chat Bot</h3><br>
-          <h3 class="mb-0">CEO Gary Vaynerchuck Data Analysis</h3><br>
-          <h3 class="mb-0">SchoolVR - Runner Up in RPI Business Model Competition</h3><br>
+          <h3 class="mb-0">Click a project to learn more!</h3>
+          <br>
+          <a href = ""><h3 class="subheading mb-3">Full Stack Fitness Web Application - In Progress</h3></a>
+          <br>
+          <a href = ""><h3 class="subheading mb-3">GroupMe Chat Bot [page not finished]</h3></a>
+          <br>
+          <a href = ""><h3 class="subheading mb-3">CEO Gary Vaynerchuck Data Analysis [page not finished]</h3></a>
+          <br>
+          <a href= "/schoolvr.html"><h3 class="subheading mb-3">SchoolVR - Runner Up in RPI Business Model Competition</h3></a>
+          <br>
       </div>
     </section>
 
@@ -266,8 +272,9 @@
           <div class="resume-content">
             <h3 class="mb-0">President</h3>
             <div class="subheading mb-3">Pi Delta Psi Asian Cultural Fraternity</div>
-            <p>Determined, updated and tracked semester budget finances. Managed daily operations through GroupMe. <br>
-               Restructured organization into a functional structure to better meet semester goals.
+            <p>Determined, updated and tracked semester budget finances. <br>
+               Managed daily operations through GroupMe. <br>
+               Restructured organization into a functional structure to better meet semester goals. <br>
                Increased membership through organization and marketing of recruitment events.
             </p>
           </div>
