--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Projects [Section in-progress]</h2>
+        <h2 class="mb-5">Projects</h2>
           <h3 class="mb-0">Click a project to learn more!</h3>
           <br>
           <a href = ""><h3 class="subheading mb-3">Full Stack Fitness Web Application - In Progress</h3></a>
