changes to school.vr text

--- a/schoolvr.html
+++ b/schoolvr.html
@@ -53,8 +53,10 @@
                   <h3 class="mb-0">An Introduction</h3>
                   
                   <div>School VR was a proposal to reinvent online education. My team and I aimed to take advantage of one of the hottest tech trends and utilize its immersive and interactive features to complement the benefits of an online education while covering its outstanding problems. <br><br>
-                    Our vision was to bring online education to life. <strong>Think Ready Player One.</strong> We wanted students to be able to connect to these classrooms from just a WiFi connection. We wanted to rid the problem of overfilled physical lectures and inconvenient class times. Our idea was limited by only our imagination as our virtual simulation would host any reality. A history class does not have to be dull, head-dozing textbook read but a simulation where students would travel to these unique events and experience it firsthand. Abstract concepts in a math class will no longer be difficult as students would be able to visualize the beauty of mathematics. <br><br>
-                    If you are interested in this project or seek additional information, you can find my contact on the home page.
+                    Our vision was to bring online education to life. <strong>Think Ready Player One.</strong> We wanted students to be able to connect to classrooms from just a WiFi connection. We wanted to rid the problem of overfilled physical lectures and inconvenient class times. 
+                    Our idea was limited only by our imagination as our virtual simulation would host any reality. A history lecture would not be a dull, head-dozing textbook read but a simulation where students would travel to unique events in time and experience it firsthand. 
+                    Abstract concepts in a math class would no longer be difficult as students would be able to visualize the beauty of mathematics. <br><br>
+                    Curious? You can find my contact on the home page.
                 </div>
                   <br>
                   <br>
