--- a/index.html
+++ b/index.html
@@ -74,21 +74,16 @@
          <br>
          <br>
 
-         <a>Click <a href="jason_resume_4_21.pdf" download  target="_blank" >here</a> for a pdf version of my resume. (Updated 4/18/20)</a>
+         <a>Click <a href="jason_resume_4_21.pdf" download  target="_blank" >here</a> for a pdf version of my resume.</a>
        </p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/jnguyen576/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/DangItJason">
             <i class="fab fa-github"></i>
           </a>
         </div>
-
-
-
-
-
       </div>
     </section>
 
@@ -207,8 +202,6 @@
             <div class="subheading mb-3">Additional Course Work</div>
               <div>Intro to Economics, Intro to Management, Operational Management, Speech Communication</div>
             <br>
-<!--             <div class="subheading mb-3">Future Course Work</div>
-              <div>Operating Systems, Linear Algebra, Open Source</div> -->
           </div>
       </div>
     </section>
