started working on gary vee and fit me pages

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <h2 class="mb-5">Projects</h2>
           <h3 class="mb-0">Click a project to learn more!</h3>
           <br>
-          <a href = ""><h3 class="subheading mb-3">Full Stack Fitness Web Application - In Progress</h3></a>
+          <a href = "/fitme.html"><h3 class="subheading mb-3">Fitness Web Application</h3></a>
           <br>
           <a href = ""><h3 class="subheading mb-3">GroupMe Chat Bot [page not finished]</h3></a>
           <br>
