--- a/fitme.html
+++ b/fitme.html
@@ -71,7 +71,7 @@
                   </div>
                   <br>
                   <br>
-                  <h3 class="mb-0">An Introduction</h3>
+                  <h3 class="mb-0">Features</h3>
 
 
                 
