edited intro paragraph to FitMe

--- a/fitme.html
+++ b/fitme.html
@@ -52,27 +52,27 @@
                 <div class="resume-content">
                   <h3 class="mb-0">Summary</h3>
                   <div>
-                    I created a full-stack fitness web application that allows users to track and progress unique workouts. As this was the largest project I've worked on,
+                    I developed a full-stack fitness web application that allows users to track and progress unique workouts. As this was the largest project I've worked on,
                     I created a SRS to identify project goals which included features, requirements and as well as tools and languages I needed to learn. This project took me a month
                     to learn the tools needed and implement the functional requirements.
                     <br>
                     <br>
-                    Tools used: JS ES6, React.js, Node/Express, MongoDB
+                    Tools used: JS ES6, React.js, Node.js/Express.js, MongoDB
                   </div>
                   <br>
                   <br>
                   <h3 class="mb-0">An Introduction</h3>
                   
                   <div>
-                    I love weight lifting. Since my sophmore year of Highschool, I've been consistenly made strides towards my lifting goals. To help with reaching goals, gym regulars often use
-                    the help of a notebook or note's app to help them track excerise weight progression. The reason for this is that continuous iterated increase in weight is key to reaching
-                    fitness goals faster. But I'm lazy. I forgot which exercises I did or of how much weight I should be lifting tonight because it's all in my head. That hinders my progress because
+                    I love weight lifting. Since my sophmore year of Highschool, I've consistenly made strides towards my lifting goals. To help get there, myself and gym regulars use
+                    the help of a notebook or note's app to track excerise weight progression. The reason for this is that calculatged, consistent increase in weight is a key to reaching
+                    goals faster. But I'm lazy. I forget which exercises I did or of how much weight I should be lifting tonight because it's all in my head! This hinders my progress because
                     I will miss days where I should have increased my weight. This is a major roadblock to success I've found when lifting on my own workout plan.
                   </div>
                   <br>
                   <br>
                   <h3 class="mb-0">Features</h3>
-
+ 
 
                 
                   <br>
