added edits to skills section

--- a/fitme.html
+++ b/fitme.html
@@ -72,6 +72,9 @@
                   <br>
                   <br>
                   <h3 class="mb-0">Features</h3>
+                  <h5 class="mb-0">Login and Registration Page</h5>
+                  <h5 class="mb-0">Unique Visual Home Page</h5>
+                  <h5 class="mb-0">Edit Personal Workout Plan</h5>
  
 
                 
