--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <div>(Proficient) Python <br>
-               (Familiar) Java, C/C++, HTML/CSS, Git <br>
+               (Familiar) Java, C/C++, HTML/CSS, <br>
                (Learning) JavaScript, React, Node.js, Express.js, Bootstrap, MongoDB, npm <br>
-                 IDE: Eclipse, Spyder, Sublime <br><br>
+                Tools: Git, VSCode, Eclipse, Spyder, Sublime <br><br>
           </div>
 
         <div class="subheading mb-3">Marketing Skills</div>
