--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">Home</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -48,13 +48,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -74,7 +74,7 @@
          <br>
          <br>
 
-         <a>Click <a href="jason_resume_5_4.pdf" download  target="_blank" >here</a> for a pdf version of my resume.</a>
+         <a>Click <a href="cv_5_14.pdf" download  target="_blank" >here</a> for a pdf version of my resume.</a>
        </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/jnguyen576/">
@@ -89,7 +89,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
@@ -142,7 +142,7 @@
           </div>
         </div> -->
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Founder of Tutoring Service</h3>
             <div class="subheading mb-3">Jason's Math Tutoring Service</div>
@@ -213,9 +213,8 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <div>(Proficient) Python <br>
-               (Familiar) Java, C/C++, HTML/CSS, <br>
-               (Learning) JavaScript, React, Node.js, Express.js, Bootstrap, MongoDB, npm <br>
+          <div>Python, Java, C/C++, HTML/CSS,  <br>
+               JavaScript, React, Node.js, Express.js, Bootstrap, MongoDB, npm <br>
                 Tools: Git, VSCode, Eclipse, Spyder, Sublime <br><br>
           </div>
 
@@ -236,20 +235,22 @@
             </div>
           </div>
       </div>
-    </section>
+    </section> -->
 
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
-          <h3 class="mb-0">Click a project to learn more!</h3>
+          <!-- <h3 class="mb-0">Click a project to learn more!</h3> -->
+          <br>
+          <a href = "/path.html"><h3 class="subheading mb-3">A* Search Path Visualization</h3></a>
           <br>
           <a href = "/fitme.html"><h3 class="subheading mb-3">Fitness Web Application</h3></a>
           <br>
-          <a href = ""><h3 class="subheading mb-3">GroupMe Chat Bot [page not finished]</h3></a>
+          <a href = ""><h3 class="subheading mb-3">GroupMe Chat Bot</h3></a>
           <br>
-          <a href = ""><h3 class="subheading mb-3">CEO Gary Vaynerchuck Data Analysis [page not finished]</h3></a>
+          <a href = ""><h3 class="subheading mb-3">CEO Gary Vaynerchuck Data Analysis</h3></a>
           <br>
           <a href= "/schoolvr.html"><h3 class="subheading mb-3">SchoolVR - Runner Up in RPI Business Model Competition</h3></a>
           <br>
@@ -258,7 +259,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Leadership</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -278,7 +279,7 @@
       </div>
 
 
-    </section>
+    </section> -->
 
   </div>
 
