added back rest of resume/portfolio

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">Home</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -48,13 +48,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li> -->
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </nav>
@@ -89,7 +89,7 @@
 
     <hr class="m-0">
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
@@ -129,7 +129,7 @@
           </div>
         </div>
 
-     <!--    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Fountain Worker</h3>
             <div class="subheading mb-3">Friendly's</div>
@@ -142,7 +142,7 @@
           </div>
         </div> -->
 
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Founder of Tutoring Service</h3>
             <div class="subheading mb-3">Jason's Math Tutoring Service</div>
@@ -223,6 +223,7 @@
                 Google Analytics<br>
                 Digital Marketing<br>
                 AD Copy<br><br>
+                SEO<br><br>
           </div>
 
         <div class="subheading mb-3">Soft Skills</div>
@@ -235,14 +236,14 @@
             </div>
           </div>
       </div>
-    </section> -->
+    </section>
 
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
-          <!-- <h3 class="mb-0">Click a project to learn more!</h3> -->
+          <h3 class="mb-0">Click a project to learn more!</h3>
           <br>
           <a href = "/path.html"><h3 class="subheading mb-3">A* Search Path Visualization</h3></a>
           <br>
@@ -259,7 +260,7 @@
 
     <hr class="m-0">
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Leadership</h2>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -279,7 +280,7 @@
       </div>
 
 
-    </section> -->
+    </section>
 
   </div>
 
