fixed space error + wierd text issue

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2018 - August 2018</span>
           </div>
-        </div> -->
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -222,7 +222,7 @@
            <div>Facebook ADs Manager<br>
                 Google Analytics<br>
                 Digital Marketing<br>
-                AD Copy<br><br>
+                AD Copy<br>
                 SEO<br><br>
           </div>
 
