added blank target to linkedin and github links

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
          <a>Click <a href="cv_5_14.pdf" download  target="_blank" >here</a> for a pdf version of my resume.</a>
        </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/jnguyen576/">
+          <a target="_blank" href="https://www.linkedin.com/in/jnguyen576/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/DangItJason">
+          <a target="_blank" href="https://github.com/DangItJason">
             <i class="fab fa-github"></i>
           </a>
         </div>
