v1 testing gif for a_star path

--- a/path.html
+++ b/path.html
@@ -66,7 +66,9 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience"
+              >Experience</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
@@ -108,16 +110,17 @@
             <div>
               After finishing my algorithms class, I felt that the algorithms I
               learned about had too many shortcomings in pathfinding. Afterall,
-              I wanted to know which algorithm was the best for reaching a
-              destination via the shortest route. After a quick google search, I
-              learned that A* was the top result. Referred to as A-star, it is
-              one of the best search algorithms because it uses information
-              about it's paths and heuristics to find the optimal solution.
+              I just wanted to know the fastest way to get from A to B in real
+              life scenario. After a quick google search, I learned that A* was
+              the top result. Referred to as A-star, it is one of the best
+              search algorithms because it uses information about it's paths and
+              heuristics during it's path finding process to find the optimal
+              solution. It's baby AI. Pretty cool if you ask me.
             </div>
             <br />
             <br />
-            <h3 class="mb-0">Explanation</h3>
-            <!-- <img src="./img/test.png" class="img-fluid" alt="Responsive image"> -->
+            <h3 class="mb-0">Demo</h3>
+            <img src="https://giphy.com/gifs/lNRyaV3EMEvMnSODXk/html5" class="img-fluid" alt="Responsive image">
 
             <br />
           </div>
