--- a/path.html
+++ b/path.html
@@ -115,12 +115,38 @@
               the top result. Referred to as A-star, it is one of the best
               search algorithms because it uses information about it's paths and
               heuristics during it's path finding process to find the optimal
-              solution. It's baby AI. Pretty cool if you ask me.
+              solution. <br /><br />
+              It's baby AI. Pretty cool if you ask me.
             </div>
             <br />
             <br />
             <h3 class="mb-0">Demo</h3>
-            <img src="https://giphy.com/gifs/lNRyaV3EMEvMnSODXk/html5" class="img-fluid" alt="Responsive image">
+            <img
+              src="https://giphy.com/gifs/lNRyaV3EMEvMnSODXk/html5"
+              class="img-fluid"
+              alt="Demo GIF of Program"
+            />
+            <div
+              style="
+                width: 100%;
+                height: 0;
+                padding-bottom: 117%;
+                position: relative;
+              "
+            >
+              <iframe
+                src="https://giphy.com/embed/lNRyaV3EMEvMnSODXk"
+                width="100%"
+                height="100%"
+                style="position: absolute;"
+                frameborder="0"
+                class="giphy-embed"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <p>
+              <a href="https://giphy.com/gifs/lNRyaV3EMEvMnSODXk">via GIPHY</a>
+            </p>
 
             <br />
           </div>
