--- a/path.html
+++ b/path.html
@@ -120,6 +120,20 @@
             </div>
             <br />
             <br />
+            <h3 class="mb-0">What's next?</h3>
+            <div>
+              My implementation of this algorithm uses the Manhattan distance
+              which is the distance between two points measured along the axes
+              at right angles. The next version will include options to select
+              different methods of calculating heuristics. There is no option to
+              turn on or off cutting corners. The current algorithm does not
+              corners. For example, if you started at point (0, 0) and had an
+              obstacle at (0, 1) and (1, 0), it's next move can not include (1,
+              1). Lastly, I plan on adding a visualization of the actual,
+              shortest path.
+            </div>
+            <br />
+            <br />
             <h3 class="mb-0">Demo</h3>
             <div
               style="
