--- a/path.html
+++ b/path.html
@@ -57,21 +57,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Home</a>
+            <a class="nav-link js-scroll-trigger" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="/index.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="/index.html">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience"
+            <a class="nav-link js-scroll-trigger" href="/index.html"
               >Experience</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
+            <a class="nav-link js-scroll-trigger" href="/index.html">Leadership</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education"
@@ -159,4 +159,13 @@
       </div>
     </section>
   </div>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
 </html>
