--- a/path.html
+++ b/path.html
@@ -57,21 +57,21 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.html">Home</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.html">Projects</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.html">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.html"
+            <a class="nav-link js-scroll-trigger" href="#experience"
               >Experience</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/index.html">Leadership</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education"
@@ -125,7 +125,7 @@
               My implementation of this algorithm uses the Manhattan distance
               which is the distance between two points measured along the axes
               at right angles. The next version will include options to select
-              different methods of calculating heuristics. There is no option to
+              different methods of calculating heuristics. There is also no option to
               turn on or off cutting corners. The current algorithm does not
               corners. For example, if you started at point (0, 0) and had an
               obstacle at (0, 1) and (1, 0), it's next move can not include (1,
