--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <br />
 
             <a
-              >Click <a href="cv_5_14.pdf" download target="_blank">here</a> for
+              >Click <a href="cv_5_22.pdf" download target="_blank">here</a> for
               a pdf version of my resume.</a
             >
           </p>
@@ -138,7 +138,7 @@
           <br />
           <a href=""><h3 class="subheading mb-3">GroupMe Chat Bot</h3></a>
           <br />
-          <a href=""
+          <a href="/garyvee.html"
             ><h3 class="subheading mb-3">
               CEO Gary Vaynerchuck Data Analysis
             </h3></a
@@ -369,8 +369,8 @@
             <div class="resume-content">
               <h3 class="mb-0">Rensselaer Polytechnic Institute</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science and Math - Concentration in AI/ML</div>
-              <p>GPA: 3.55</p>
+              <div>Computer Science - Concentration in AI/ML</div>
+              <p>GPA: 3.5</p>
               <br />
             </div>
             <div class="resume-date text-md-right">
