--- a/path.html
+++ b/path.html
@@ -57,26 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience"
-              >Experience</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education"
-              >Education</a
-            >
+            <a class="nav-link js-scroll-trigger" href="./index.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -126,11 +107,10 @@
               which is the distance between two points measured along the axes
               at right angles. The next version will include options to select
               different methods of calculating heuristics. There is also no
-              option to turn on or off cutting corners. The current algorithm
+              option to turn on or off cutting corners as the current algorithm
               does not corners. For example, if you started at point (0, 0) and
               had an obstacle at (0, 1) and (1, 0), it's next move can not
-              include (1, 1). Lastly, I plan on adding a visualization of the
-              actual, shortest path.
+              include (1, 1).
             </div>
             <br />
             <br />
