login/signup pictures

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
               <h3 class="mb-0">Rensselaer Polytechnic Institute</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science - Concentration in AI/ML</div>
-              <p>GPA: 3.5</p>
+              <p>GPA: 3.52</p>
               <br />
             </div>
             <div class="resume-date text-md-right">
@@ -383,8 +383,10 @@
             <div class="subheading mb-3">Technical Course Work</div>
             <div>
               Multivariable Calculus, Differential Equations, Discrete Math,
-              Computer Science I, Data Structures, Intro to Algorithms,
-              Principles of Software, Computer Organization
+              Linear Algebra, Computer Science I, Data Structures, Intro to
+              Algorithms, Principles of Software, Computer Organization,
+              Operating Systems, Computer Communication Networks, Application
+              Programming, Open Source
             </div>
             <br />
             <div class="subheading mb-3">Additional Course Work</div>
