--- a/fitme.html
+++ b/fitme.html
@@ -57,26 +57,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience"
-              >Experience</a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Leadership</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education"
-              >Education</a
-            >
+            <a class="nav-link js-scroll-trigger" href="./index.html">Projects</a>
           </li>
         </ul>
       </div>
@@ -127,7 +108,14 @@
             <br />
             <h3 class="mb-0">Login and Registration</h3>
             <img
-              src="./img/test.png"
+              src="./img/login.png"
+              class="img-fluid"
+              alt="Responsive image"
+            />
+            <br />
+            <br />
+            <img
+              src="./img/signup.png"
               class="img-fluid"
               alt="Responsive image"
             />
