--- a/index.html
+++ b/index.html
@@ -206,6 +206,26 @@
           >
             <div class="resume-content">
               <h3 class="mb-0">
+                Full Stack Developer
+              </h3>
+              <div class="subheading mb-3">
+                Rennselaer Center Open Source
+              </div>
+              <p>
+                Leading a team of 6 developers to develop an intuitive platform to connect studednts to tutors and give tutors a business management tool.
+                Using MERN Stack, Git, Docker and agile methodologies for development.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2019 - December 2019</span>
+            </div>
+          </div>
+
+          <div
+            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="resume-content">
+              <h3 class="mb-0">
                 Undergraduate Computer Science Teaching Assistant
               </h3>
               <div class="subheading mb-3">
