--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2019 - December 2019</span>
+              <span class="text-primary">May 2020 - Present</span>
             </div>
           </div>
 
