--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <div>
-            Python, Java, C/C++, HTML/CSS, <br />
+            Python, Java, C/C++, HTML/CSS, PHP<br />
             JavaScript, React, Node.js, Express.js, Bootstrap, MongoDB, npm
             <br />
             Tools: Git, VSCode, Eclipse, Spyder, Sublime <br /><br />
@@ -390,7 +390,7 @@
               <h3 class="mb-0">Rensselaer Polytechnic Institute</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science - Concentration in AI/ML</div>
-              <p>GPA: 3.52</p>
+              <p>GPA: 3.91</p> 
               <br />
             </div>
             <div class="resume-date text-md-right">
