--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
             <a href="mailto:name@email.com">nguyenjason06@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Looking for an <strong>intern</strong>? You came to the right place.
+            Building projects from scratch and having fun in the process.
+            <br>
+            Currently seeking internship opportunities.
             <br />
             <br />
-
             <a
-              >Click <a href="cv_5_22.pdf" download target="_blank">here</a> for
+              >Click <a href="jasonnguyen_8_20.pdf" download target="_blank">here</a> for
               a pdf version of my resume.</a
             >
           </p>
@@ -128,6 +129,14 @@
           <h2 class="mb-5">Projects</h2>
           <h3 class="mb-0">Click a project to learn more!</h3>
           <br />
+          <a href="/tutorbase.html"
+            ><h3 class="subheading mb-3">TutorBase</h3></a
+          >
+          <br />
+          <a href="/chat.html"
+            ><h3 class="subheading mb-3">Multi-threaded Chat Server</h3></a
+          >
+          <br />
           <a href="/path.html"
             ><h3 class="subheading mb-3">A* Search Path Visualization</h3></a
           >
@@ -137,12 +146,11 @@
           >
           <br />
           <a href=""><h3 class="subheading mb-3">GroupMe Chat Bot</h3></a>
-          <br />
-          <a href="/garyvee.html"
+          <!-- <a href="/garyvee.html"
             ><h3 class="subheading mb-3">
               CEO Gary Vaynerchuck Data Analysis
             </h3></a
-          >
+          > -->
           <br />
           <a href="/schoolvr.html"
             ><h3 class="subheading mb-3">
