resume edits + gpa

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <br />
             <br />
             <a
-              >Click <a href="jasonnguyen_8_20.pdf" download target="_blank">here</a> for
+              >Click <a href="jn_resume_swe.pdf" download target="_blank">here</a> for
               a pdf version of my resume.</a
             >
           </p>
@@ -398,7 +398,7 @@
               <h3 class="mb-0">Rensselaer Polytechnic Institute</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Computer Science - Concentration in AI/ML</div>
-              <p>GPA: 3.91</p> 
+              <p>GPA: 3.5</p> 
               <br />
             </div>
             <div class="resume-date text-md-right">
