--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
             <a href="mailto:name@email.com">nguyenjason06@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Building projects from scratch and having fun in the process.
+            Taking projects from zero to hero.
             <br>
-            Currently seeking internship opportunities.
+            Currently seeking full-time opportunites starting Summer 2022.
             <br />
             <br />
             <a
-              >Click <a href="jn_resume_swe.pdf" download target="_blank">here</a> for
+              >Click <a href="jason-nguyen.pdf" download target="_blank">here</a> for
               a pdf version of my resume.</a
             >
           </p>
