--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <br />
             <br />
             <a
-              >Click <a href="jason-nguyen.pdf" download target="_blank">here</a> for
+              >Click <a href="jason_nguyen.pdf" download target="_blank">here</a> for
               a pdf version of my resume.</a
             >
           </p>
