Structure changes + resume

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#interests">Projects</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
@@ -78,7 +78,7 @@
             <a class="nav-link js-scroll-trigger" href="#education"
               >Education</a
             >
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -100,7 +100,7 @@
           <p class="lead mb-5">
             Taking projects from zero to hero.
             <br>
-            Currently seeking full-time opportunites starting Summer 2022.
+            Currently seeking full-time opportunites.
             <br />
             <br />
             <a
@@ -161,7 +161,7 @@
         </div>
       </section>
 
-      <hr class="m-0" />
+      <!-- <hr class="m-0" />
 
       <section
         class="resume-section p-3 p-lg-5 d-flex align-items-center"
@@ -178,7 +178,7 @@
             Tools: Git, VSCode, Eclipse, Spyder, Sublime <br /><br />
           </div>
 
-          <div class="subheading mb-3">Marketing Skills</div>
+          <div class="subheading mb-3">Tools</div>
           <div>
             Facebook ADs Manager<br />
             Google Analytics<br />
@@ -208,6 +208,25 @@
       >
         <div class="w-100">
           <h2 class="mb-5">Experience</h2>
+
+          <div
+            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+          >
+            <div class="resume-content">
+              <h3 class="mb-0">
+                Technology Co-OP
+              </h3>
+              <div class="subheading mb-3">
+                Johnson & Johnson
+              </div>
+              <p>
+                Responsible for development of an enterprise learning tool used to train and educate teams to embrace the agile methodology using Ruby on Rails.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jan 2021 - Present</span>
+            </div>
+          </div>
 
           <div
             class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
@@ -397,12 +416,12 @@
             <div class="resume-content">
               <h3 class="mb-0">Rensselaer Polytechnic Institute</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Concentration in AI/ML</div>
-              <p>GPA: 3.5</p> 
+              <div>Computer Science</div>
+              <p>GPA: 3.56</p> 
               <br />
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Graduation: May 2022</span>
+              <span class="text-primary">Graduation: Fall 2021</span>
             </div>
           </div>
 
@@ -413,8 +432,7 @@
               Multivariable Calculus, Differential Equations, Discrete Math,
               Linear Algebra, Computer Science I, Data Structures, Intro to
               Algorithms, Principles of Software, Computer Organization,
-              Operating Systems, Computer Communication Networks, Application
-              Programming, Open Source
+              Operating Systems, Computer Communication Networks, RCOS, Large Scale Programming & Testing, Software Design & Documentation
             </div>
             <br />
             <div class="subheading mb-3">Additional Course Work</div>
@@ -425,7 +443,7 @@
             <br />
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
   </body>
   <!-- Bootstrap core JavaScript -->
