--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <a href="mailto:name@email.com">nguyenjason06@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Taking projects from zero to hero.
+            Why not change the world?.
             <br>
             Currently seeking full-time opportunites.
             <br />
