--- a/index.html
+++ b/index.html
@@ -98,15 +98,8 @@
             <a href="mailto:name@email.com">nguyenjason06@gmail.com</a>
           </div>
           <p class="lead mb-5">
-            Why not change the world?.
+            Why not change the world?
             <br>
-            Currently seeking full-time opportunites.
-            <br />
-            <br />
-            <a
-              >Click <a href="jason_nguyen.pdf" download target="_blank">here</a> for
-              a pdf version of my resume.</a
-            >
           </p>
           <div class="social-icons">
             <a target="_blank" href="https://www.linkedin.com/in/jnguyen576/">
