--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Personal Website" />
     <meta name="author" content="Jason Nguyen" />
 
-    <title>Jason Nguyen</title>
+    <title>Jason Nguyen!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
